--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,14 +6,12 @@
   --neutral-dark: #222222;
 }
 
-
 .container {
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 20px;
   font-family: Arial, sans-serif;
 }
-
 
 .header-box {
   background: linear-gradient(135deg, var(--primary), var(--secondary));
@@ -64,11 +62,52 @@
 }
 
 
-
-
-
 /*AUTHOR: BEATRICE
 FILE: jobs.html*/
+
+/* JOB BANNER */
+.job-banner {
+  position: relative;
+  width: 100%;
+  height: 360px; /* adjust height as needed */
+  overflow: hidden;
+}
+
+/* background image */
+.job-banner-img {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/* gradient overlay */
+.job-banner::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: linear-gradient(
+    to top,
+    rgba(0, 119, 204, 0.85) 0%,   
+    rgba(0, 119, 204, 0.55) 50%,
+    rgba(0, 119, 204, 0.00) 100%);
+  z-index: 1;
+}
+
+.job-banner-title {
+  position: absolute;
+  z-index: 2;
+  color: white;
+  font-size: 4rem;
+  font-weight: 800;
+  left: 50%;      
+  top: 50%; 
+  transform: translate(-50%, -50%); 
+  margin: 0;
+  text-align: center;
+
+}
 
 /* ASIDE: 25% width, floats to the right, coloured border, margin & padding */
 .right-aside {
