--- a/styles/styles.css
+++ b/styles/styles.css
@@ -73,7 +73,7 @@ FILE: jobs.html*/
 }
 
 body {
-  font-family: "Plus Jakarta Sans", Arial, sans-serif;  
+  font-family: Arial, sans-serif;  
 }
 
 
